Revert "fix gap footer a"
This reverts commit 813cdb1cb65a3b6d20d0ef3113b2a1fd2d398a55.

--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -80,7 +80,7 @@
     a {
       font-size: 20px;
       line-height: 28px;
-      gap: 11px;
+      gap: 12px;
       /* stylelint-disable-next-line */
       svg {
         width: 26px;
